# musical-lamp

./: Cargo.toml  Dockerfile  Dockerfile_chef  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
