[package]
name = "musical_lamp"
version = "0.1.0"
authors = ["jwl <james.warren.leung@pm.me>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "musical_lamp"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = "0.4.15"
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
sqlx = { version = "0.5.2", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
env_logger = "0.8.3"
log = "0.4.14"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
