[package]
name = "musical_lamp"
version = "0.1.0"
authors = ["jwl <james.warren.leung@pm.me>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "musical_lamp"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = "0.4.15"
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]


[dev-dependencies]
actix-rt = "2"
once_cell = "1.7.2"
reqwest = "0.11"
tokio = "1"
